Refs #10443: Shift the bean container's cog menu affordance 35 pixels to the left to make sure it is always separately visible and accessible from the cog menus for the blocks it contains.

--- a/boots_grid/css/base.less
+++ b/boots_grid/css/base.less
@@ -74,8 +74,8 @@ img {
 }
 
 // Fixes contextual link display for bean containers
-.bean-container.contextual-links-region:hover {
-  padding-top: 20px;
+.bean-container.contextual-links-region > .contextual-links-wrapper {
+  right: 35px;
 }
 
 // Search
